--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Front page</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open Sans:300,400,500,700,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -21,8 +21,10 @@
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+       
+       
+        <!-- Template Stylesheet 
+        <link href="css/style.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -542,10 +544,10 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="#">Music Link Foundation</a>, All Right Reserved.</p>
                     </div>
                     <div class="col-md-6">
-                        <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                        <p>Designed By <a href="https://htmlcodex.com">Group 11 / UXUI 2022 Bootcamp </a></p> 
                     </div>
                 </div>
             </div>
