--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </section>
         <section class="our_activity">
-            <h2>OUR ACTIVITY</h2>
+            <h2>About Music Link Foundation</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. </p>
             <div class="container">
                 <div class="row">
@@ -140,8 +140,8 @@
                             <div class="promo-icon">
                                 <i class="material-icons">near_me</i>
                             </div>
-                            <h2><a href="#">Fundraising</a></h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+                            <h2><a href="#">Mission</a></h2>
+                            <p>Any child who has musical potential deserves the opportunity to nurture this talent to its full extent. Many children lack the chance to receive music lessons due to financial need.The MusicLink Foundation reaches out to low income families by linking these students with professional music teachers willing to reduce their fee to make the lessons more affordable for the child. </p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
@@ -149,8 +149,8 @@
                             <div class="promo-icon">
                                 <i class="material-icons">favorite</i>
                             </div>
-                            <h2><a href="#">Volunteering</a></h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+                            <h2><a href="#">Values</a></h2>
+                            <p>MusicLink began in 1992 as a program of the Virginia Music Teachers Association, seeking a way to offer private music instruction to students in need by linking them with teachers willing to provide low- or no-cost instruction for as long as students wish to learn. </p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
@@ -158,41 +158,44 @@
                             <div class="promo-icon">
                                 <i class="material-icons">dashboard</i>
                             </div>
-                            <h2><a href="#">Our Programs</a></h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+                            <h2><a href="#">Board</a></h2>
+                            <p>Joanne Haroutounian, Ph.D. Founder of the MusicLink program and director of the program since 1992. International consultant in musical talent identification. Adjunct professor of piano and pedagogy (retired) at George Mason University for over 20 years. </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
         <section class="events_section_area">
-            <h2>UPCOMING EVENTS</h2>
+            <h2>Our Music Comnunity</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. </p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
                             <img src="img/events_single_one.jpg" alt="">
-                            <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>California Street</span></p>
+                            
                             <div class="clear"></div>
-                            <h3>Education For Children</h3>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</h6>
+                            <h3>Student Spotlight</h3>
+                            <h6>Brandon Chen</h6>
+                            <p>Our first spotlight of the new year is shining on MusicLink student Brandon Chen, a freshman at David Douglas High School in Portland, Oregon. He began playing piano when he was eight and participated in group piano lesson for almost a year before his teacher recommended he take private lessons.</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
                             <img src="img/events_single_two.jpg" alt="">
-                            <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>California Street</span></p>
-                            <h3>Education For Children</h3>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</h6>
+                             <h3>Teacher Spotlight</h3>
+                            <h6>Patti Nyien</h6>
+                            <p>Patti Nyien has been a member of the Salt Creek Local Association of Music Teachers National Conference since 1987. She became Nationally Certified in 1992 and has been teaching in Westmont/Hinsdale, IL since 1980.</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="events_single">
                             <img src="img/events_single_three.jpg" alt="">
-                            <p><span class="event_left"><i class="material-icons">access_time</i>1:00 pm - 3:00 pm</span><span class="event_right"><i class="material-icons">location_on</i>California Street</span></p>
-                            <h3>Education For Children</h3>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</h6>
+                            <h3>Alumni Spotlight</h3>
+                            <h6>Erika Roderick</h6>
+                            <p>We are shining our alumni spotlight on Erika Roderick from Alexandria, Minnesota. This is the second time the spotlight has shone on Erika as she was in the student spotlight in May of 2016 while taking piano lessons at Diane Alveshere Studios. The MusicLink Foundation donated a keyboard to Erika which allowed her to continue playing when she otherwise would not have been able to.</p>
                         </div>
                     </div>
                 </div>
@@ -228,28 +231,28 @@
                         <div class="block">
                             <p><i class="material-icons">favorite</i></p>
                             <p class="counter-wrapper"><span class="fb"></span></p>
-                            <p class="text-block">CAUSES</p>
+                            <p class="text-block">From Donors Around the World</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
                             <p><i class="material-icons">language</i></p>
                             <p class="counter-wrapper"><span class="code"></span></p>
-                            <p class="text-block">PLACES</p>
+                            <p class="text-block">Students Helped</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
                             <p><i class="material-icons">person_add</i></p>
                             <p class="counter-wrapper"><span class="bike"></span></p>
-                            <p class="text-block">VOLUNTEERS</p>
+                            <p class="text-block">Teachers Registered</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
                             <p><i class="material-icons">people</i></p>
                             <p class="counter-wrapper"><span class="coffee"></span></p>
-                            <p class="text-block">SAVED</p>
+                            <p class="text-block">Instruments Donated</p>
                         </div>
                     </div>
                 </div>
@@ -331,7 +334,7 @@
                             <div class="item">
                                 <img src="img/our_cuauses_one.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>FUTURES FOR CHILDREN</h2>
+                                    <h2>SUPPORT TO MUSIC LINK FOUNDATION</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
                                     <div class="progress-text">
                                         <p class="progress-top">50%</p>
@@ -347,7 +350,7 @@
                             <div class="item">
                                 <img src="img/our_cuauses_two.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>FUTURES FOR CHILDREN</h2>
+                                    <h2>SUPPORT JOSHUA’S TO BECOME A VIOLINIST</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
                                     <div class="progress-text">
                                         <p class="progress-top">50%</p>
@@ -363,7 +366,7 @@
                             <div class="item">
                                 <img src="img/our_cuauses_three.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>FUTURES FOR CHILDREN</h2>
+                                    <h2>BECOME A MEMBER</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
                                     <div class="progress-text">
                                         <p class="progress-top">50%</p>
@@ -379,7 +382,7 @@
                             <div class="item">
                                 <img src="img/our_cuauses_three.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>FUTURES FOR CHILDREN</h2>
+                                    <h2>BECOME A VOLUNTEER</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
                                     <div class="progress-text">
                                         <p class="progress-top">50%</p>
@@ -402,7 +405,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="donors_input">
-                            <h2>DONATION NOW</h2>
+                            <h2><B>DONATE NOW</B></h2>
                             <form action="#" method="post">
                                 <p class="amount">
                                     <label for="usd">AMOUNT : </label>
@@ -425,11 +428,11 @@
                                     
                                 </select>
                                 </h4>
-                                <input type="submit" value="DONATION NOW">
+                                <input type="submit" value="DONATE NOW">
                             </form>
                         </div>
                         <div class="donors_image">
-                            <h2>FEATURED DONORS</h2>
+                            <h2><b>FEATURED DONORS</b></h2>
                             <div class="donors_featured owl-carousel owl-theme">
                                 <div class="item">
                                     <img src="img/donors_featured_one.jpg" alt="">
@@ -498,9 +501,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-contact">
                             <h2>Our Head Office</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                            <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                            <p><i class="fa fa-envelope"></i>info@example.com</p>
+                            <p><i class="fa fa-map-marker-alt"></i>1043 N. McKinley Road <br>Arlingtion, VA 22205 - USA</p>
+                            <p><i class="fa fa-phone-alt"></i>+1 (703) 534-9490</p>
+                            <p><i class="fa fa-envelope"></i>contact@mlfoundation.com</p>
                             <div class="footer-social">
                                 <a class="btn btn-custom" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-custom" href=""><i class="fab fa-facebook-f"></i></a>
@@ -514,19 +517,19 @@
                             <h2>Popular Links</h2>
                             <a href="">About Us</a>
                             <a href="">Contact Us</a>
-                            <a href="">Popular Causes</a>
-                            <a href="">Upcoming Events</a>
-                            <a href="">Latest Blog</a>
+                            <a href="">Our Programs</a>
+                            <a href="">Become a Member</a>
+                            <a href="">Become a Volunteer</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Useful Links</h2>
-                            <a href="">Terms of use</a>
-                            <a href="">Privacy policy</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="">Donate Now</a>
+                            <a href="">Our Partners</a>
+                            <a href="">News</a>
+                            <a href="">Our Cause</a>
+                            <a href="">Donate an Instrument</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -544,10 +547,10 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="#">Music Link Foundation</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="#">Music Link Foundation</a>, All Right Reserved since April 2013.</p>
                     </div>
                     <div class="col-md-6">
-                        <p>Designed By <a href="https://htmlcodex.com">Group 11 / UXUI 2022 Bootcamp </a></p> 
+                        <p>Designed By <a href="https://htmlcodex.com">Group 11 / UXUI 2021-2022 Bootcamp </a></p> 
                     </div>
                 </div>
             </div>
