--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <link href="css/style.css" rel="stylesheet"> -->
 
   <!-- LIB FOR new btn donation box-->
+  <!-- THIS LIBRARY IS IN CONFLIT WITH FOOTER ICONS - KEEP OFF FOR WHILE -
   <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-
 
 <!-- NEW BTN STYLE FOR DONATION BOX-->
 
@@ -189,13 +189,12 @@ input::-webkit-inner-spin-button {
                         <div class="col-md-7 col-sm-12 col-xs-12">
                             <div class="menu">
                                 <ul class="nav navbar-nav">
-                                    <li class="active"><a href="#">HOME</a></li>
                                     <li><a href="#">ABOUT US</a></li>
-                                    <li><a href="#">CAUSES</a></li>
-                                    <li><a href="#">EVENT</a></li>
-                                    <li><a href="#">PORTFOLIO </a></li>
-                                    <li><a href="#">BLOG</a></li>
-                                    <li><a href="#">CONTACT</a></li>
+                                    <li><a href="#">SUPPORT US</a></li>
+                                    <li><a href="#">BUSINESS PARTNERS</a></li>
+                                    <li><a href="#">NEWS AND EVENTS </a></li>
+                                    
+                                    <li><a href="#">CONTACT US</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -391,7 +390,7 @@ input::-webkit-inner-spin-button {
 
     <h1>Music Link Gallery</h1>
 
-    <p class="page-description text-center">Check our last </p>
+    <p class="page-description text-center">Check our last photos</p>
     
     <div class="tz-gallery">
 
