--- a/index.html
+++ b/index.html
@@ -392,43 +392,8 @@ input::-webkit-inner-spin-button {
 
     <p class="page-description text-center">Check our last photos</p>
     
-    <div class="tz-gallery">
-
-        <div class="row">
-
-            <div class="col-sm-12 col-md-4">
-                <a class="lightbox">
-                    <img src="img/bridge.jpg" alt="Bridge">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox">
-                    <img src="img/park.jpg" alt="Park">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox">
-                    <img src="img/tunnel.jpg" alt="Tunnel">
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-8">
-                <a class="lightbox">
-                    <img src="img/traffic.jpg" alt="Traffic">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox">
-                    <img src="img/coast.jpg" alt="Coast">
-                </a>
-            </div> 
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox">
-                    <img src="img/rails.jpg" alt="Rails">
-                </a>
-            </div>
-
-        </div>
-
+    <div class="justify-content-center">
+        <img src="img/student_testimonials.png"
     </div>
 
 </div>
