--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@ input::-webkit-inner-spin-button {
 
     <p class="page-description text-center">Check our last photos</p>
     
-    <div class="justify-content-center">
-        <img src="img/student_testimonials.png"
+    <div class="testimonials">
+        <img class="stu-test" src="img/student_testimonials.png"
     </div>
 
 </div>
