--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@ input::-webkit-inner-spin-button {
 
 <div class="container gallery-container">
 
-    <h1>Music Link Gallery</h1>
+    <h1>OUR STUDENTS</h1>
 
-    <p class="page-description text-center">Check our last photos</p>
+    <p class="page-description text-center">Their stories</p>
     
     <div class="testimonials">
         <img class="stu-test" src="img/student_testimonials.png"
