renamed some texts
gallery
our community music

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ input::-webkit-inner-spin-button {
 
 
         <section class="events_section_area">
-            <h2>Our Music Comnunity</h2>
+            <h2>Our Music Community</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. </p>
             <div class="container">
                 <div class="row">
@@ -389,10 +389,10 @@ input::-webkit-inner-spin-button {
 
 <div class="container gallery-container">
 
-    <h1>Music Link Gallery</h1>
+    <h1>OUR STUDENTS</h1>
 
-    <p class="page-description text-center">Check our last </p>
-    <p class="page-description text-center">Check our last photos</p>
+    <p class="page-description text-center">Their stories </p>
+
     
     <div class="tz-gallery">
 
