--- a/index.html
+++ b/index.html
@@ -214,42 +214,37 @@ input::-webkit-inner-spin-button {
                         <div class="client owl-carousel owl-theme">
                             <div class="item">
                                 <div class="text">
-                                    <h3>Support Joshua’s dream of becoming a Violinist</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                                    <h5 class="white-button"><a href="#">DONATE NOW</a></h5>
-                                    <h5><a href="#">CONTACT US</a></h5>
+                                    <h3>Support Joshua's dream of becoming a Violinist</h3>
+                                    <p>Joshua is 11 years old and has always wanted to become a violinist.<br>Support Joshua in his goal and make his dream a reality.</p>
+                                    <h5><a href="#">LEARN MORE</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="text">
                                     <h3>Financial Help</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                                    <h5 class="white-button"><a href="#">DONATE NOW</a></h5>
-                                    <h5><a href="#">CONTACT US</a></h5>
+                                    <p>We greatly appreciate your support in helping us provide the children in our community with opportunities to recieve a musical education.<br>Contribute to our goal to reach $100 000 in 2022.</p>
+                                    <h5><a href="#">LEARN MORE</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="text">
                                     <h3>Donate an Instrument</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                                    <h5 class="white-button"><a href="#">DONATE NOW</a></h5>
-                                    <h5><a href="#">CONTACT US</a></h5>
+                                    <p>Donate an instrument to help support our students in their musical education journey.<br>We accept all types of instruments from drums to flutes and cellos!</p>
+                                    <h5><a href="#">LEARN MORE</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="text">
                                     <h3>Become a Volunteer</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                                    <h5 class="white-button"><a href="#">DONATE NOW</a></h5>
-                                    <h5><a href="#">CONTACT US</a></h5>
+                                    <p>Want to become a MusicLinks teacher or camp counsellor?<br>Volunteer with us for the opportunity to work with our students.</p>
+                                    <h5><a href="#">LEARN MORE</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="text">
                                     <h3>CHILDREN NEED YOUR HELP</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                                    <h5 class="white-button"><a href="#">DONATE NOW</a></h5>
-                                    <h5><a href="#">CONTACT US</a></h5>
+                                    <p>Many children in our communities dream of becoming musicians, but need our help to provide them with opportunities to pursue their dreams.</p>
+                                    <h5><a href="#">LEARN MORE</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -317,7 +312,6 @@ input::-webkit-inner-spin-button {
 
         <section class="events_section_area">
             <h2>Our Music Community</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. </p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
@@ -469,8 +463,7 @@ input::-webkit-inner-spin-button {
 
 
         <section class="our_cuauses">
-            <h2>OUR CAUSES</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. </p>
+            <h2>SUPPORT US</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -478,15 +471,15 @@ input::-webkit-inner-spin-button {
                             <div class="item">
                                 <img src="img/our_cuauses_one.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>SUPPORT TO MUSIC LINK FOUNDATION</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
+                                    <h2>SUPPORT MUSIC LINK FOUNDATION</h2>
+                                    <p>Contribute to our goal to reach $100 000 in 2022 to provide our student with the opportunity to receive a musical education.</p>
                                     <div class="progress-text">
-                                        <p class="progress-top">50%</p>
+                                        <p class="progress-top">20%</p>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%"></div>
                                         </div>
-                                        <p class="progress-left">Raised: <span>$1200</span></p>
-                                        <p class="progress-right">Goal: <span>$2400</span></p>
+                                        <p class="progress-left">Raised: <span>$19 577.38</span></p>
+                                        <p class="progress-right">Goal: <span>$100 000</span></p>
                                     </div>
                                     <h2 class="borderes"><a href="#">DONATE NOW</a></h2>
                                 </div>
@@ -494,14 +487,14 @@ input::-webkit-inner-spin-button {
                             <div class="item">
                                 <img src="img/our_cuauses_two.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>SUPPORT JOSHUA’S TO BECOME A VIOLINIST</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
+                                    <h2>HELP JOSHUA PURSUE HIS DREAM</h2>
+                                    <p>Joshua is 11 years old and has always wanted to become a violinist. Support Joshua in his goal and make his dream a reality.</p>
                                     <div class="progress-text">
-                                        <p class="progress-top">50%</p>
+                                        <p class="progress-top">73%</p>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100" style="width:73%"></div>
                                         </div>
-                                        <p class="progress-left">Raised: <span>$1200</span></p>
+                                        <p class="progress-left">Raised: <span>$1750</span></p>
                                         <p class="progress-right">Goal: <span>$2400</span></p>
                                     </div>
                                     <h2 class="borderes"><a href="#">DONATE NOW</a></h2>
@@ -510,33 +503,33 @@ input::-webkit-inner-spin-button {
                             <div class="item">
                                 <img src="img/our_cuauses_four.jpg" alt="">
                                 <div class="for_padding">
-                                    <h2>BECOME A MEMBER</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
+                                    <h2>FUND MUSICLINK'S CAMP SCHOLARSHIP</h2>
+                                    <p>Wish to support a specific student or group of students for camp scholarships? Become a camp sponsor with a donation of $250 or more.</p>
                                     <div class="progress-text">
-                                        <p class="progress-top">50%</p>
+                                        <p class="progress-top">31%</p>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="31" aria-valuemin="0" aria-valuemax="100" style="width:31%"></div>
                                         </div>
-                                        <p class="progress-left">Raised: <span>$1200</span></p>
-                                        <p class="progress-right">Goal: <span>$2400</span></p>
+                                        <p class="progress-left">Members: <span>220</span></p>
+                                        <p class="progress-right">Goal: <span>700</span></p>
                                     </div>
-                                    <h2 class="borderes"><a href="#">DONATE NOW</a></h2>
+                                    <h2 class="borderes"><a href="#">BECOME A MEMBER</a></h2>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="img/our_cuauses_three.jpg" alt="">
                                 <div class="for_padding">
                                     <h2>BECOME A VOLUNTEER</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minima</p>
+                                    <p>Want to become a MusicLinks teacher or camp counsellor? Volunteer with us for the opportunity to work with our students.</p>
                                     <div class="progress-text">
-                                        <p class="progress-top">50%</p>
+                                        <p class="progress-top">63%</p>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%"></div>
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100" style="width:63%"></div>
                                         </div>
-                                        <p class="progress-left">Raised: <span>$1200</span></p>
-                                        <p class="progress-right">Goal: <span>$2400</span></p>
+                                        <p class="progress-left">Volunteers: <span>1900</span></p>
+                                        <p class="progress-right">Goal: <span>3000</span></p>
                                     </div>
-                                    <h2 class="borderes"><a href="#">DONATE NOW</a></h2>
+                                    <h2 class="borderes"><a href="#">VOLUNTEER NOW</a></h2>
                                 </div>
                             </div>
                         </div>
