Update Icons and text aligns
Yellow strip icons updated

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
        
+
        
         <!-- Template Stylesheet 
         <link href="css/style.css" rel="stylesheet"> -->
@@ -294,6 +295,7 @@ input::-webkit-inner-spin-button {
                             </div>
                             <h2><a href="#">Values</a></h2>
                             <p>MusicLink began in 1992 as a program of the Virginia Music Teachers Association, seeking a way to offer private music instruction to students in need by linking them with teachers willing to provide low- or no-cost instruction for as long as students wish to learn. </p>
+                        <br><br><br><br>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
@@ -303,6 +305,7 @@ input::-webkit-inner-spin-button {
                             </div>
                             <h2><a href="#">Board</a></h2>
                             <p>Joanne Haroutounian, Ph.D. Founder of the MusicLink program and director of the program since 1992. International consultant in musical talent identification. Adjunct professor of piano and pedagogy (retired) at George Mason University for over 20 years. </p>
+                            <br><br><br><br>
                         </div>
                     </div>
                 </div>
@@ -332,7 +335,7 @@ input::-webkit-inner-spin-button {
                              <h3>Teacher Spotlight</h3>
                             <h6>Patti Nyien</h6>
                             <p>Patti Nyien has been a member of the Salt Creek Local Association of Music Teachers National Conference since 1987. She became Nationally Certified in 1992 and has been teaching in Westmont/Hinsdale, IL since 1980.</p>
-                            <br><br>
+                            <br><br><br>
                             <p><b><a href="#"> > READ MORE.</a> </b></p>
                         </div>
                     </div>
@@ -377,28 +380,28 @@ input::-webkit-inner-spin-button {
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
-                            <p><i class="material-icons">favorite</i></p>
+                            <p class="iconsYellowStrip"><img src="img/donation-icon01.svg"> </p>
                             <p class="counter-wrapper"><span class="fb"></span></p>
                             <p class="text-block">Donations</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
-                            <p><i class="material-icons">language</i></p>
+                            <p class="iconsYellowStrip"> <img src="img/students-icon02.svg"></p>
                             <p class="counter-wrapper"><span class="code"></span></p>
                             <p class="text-block">Students Helped</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
-                            <p><i class="material-icons">person_add</i></p>
+                            <p class="iconsYellowStrip"> <img src="img/teachers-icon03.svg"></p>
                             <p class="counter-wrapper"><span class="bike"></span></p>
                             <p class="text-block">Teachers Registered</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
                         <div class="block">
-                            <p><i class="material-icons">people</i></p>
+                            <p class="iconsYellowStrip"> <img src="img/instruments-icon04.svg"></p>
                             <p class="counter-wrapper"><span class="coffee"></span></p>
                             <p class="text-block">Instruments Donated</p>
                         </div>
@@ -520,7 +523,7 @@ input::-webkit-inner-spin-button {
                                 <img src="img/our_cuauses_three.jpg" alt="">
                                 <div class="for_padding">
                                     <h2>BECOME A VOLUNTEER</h2>
-                                    <p>Want to become a MusicLinks teacher or camp counsellor? Volunteer with us for the opportunity to work with our students.</p>
+                                    <p>Want to become a MusicLinks teacher or camp counsellor? Volunteer with us for the opportunity to work with our students.</p><br>
                                     <div class="progress-text">
                                         <p class="progress-top">63%</p>
                                         <div class="progress">
