--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@ input::-webkit-inner-spin-button {
         </header>
 
 
-        
+  <!-- end old carousel-->      
+  <!--
         <section class="carosal-area">
             <div class="container">
                 <div class="row">
@@ -253,6 +254,54 @@ input::-webkit-inner-spin-button {
                 </div>
             </div>
         </section>
+    --> 
+<!-- end old carousel-->
+
+<!-- NEW CAROUSEL -->
+<div class="container-fluid p-0">
+<div id="blog-carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                <h2 class="display-4 m-0 mt-2 mt-md-3 text-white"><b>Support Joshua's Dream Of Becoming a Violinist</b></h2>
+                <h3 class="text-primary m-0">Joshua is 11 years old and has always wanted to become a violinist.<br>Support Joshua in his goal and make his dream a reality.</h3>
+                <a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4"><b>Learn More</b></a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                <h2 class="display-4 m-0 mt-2 mt-md-3 text-white"><b>Shape The Future Of Our Music Students </b></h2>
+                <h3 class="text-primary m-0"></h3>
+                <a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4"><b>Learn More</b></a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="w-100" src="img/carousel-3.jpg" alt="Image">
+            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                <h2 class="display-4 m-0 mt-2 mt-md-3 text-white"><b>Give Your Instrument a Secound Home</b></h2>
+                <h3 class="text-primary m-0"></h3>
+                <a href="" class="btn btn-lg btn-primary mt-3 mt-md-4 px-4"><b>Learn More</b></a>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#blog-carousel" data-slide="prev">
+        <div class="btn btn-primary rounded-circle" style="width: 45px; height: 45px;">
+            <span class="carousel-control-prev-icon mb-n2"></span>
+        </div>
+    </a>
+    <a class="carousel-control-next" href="#blog-carousel" data-slide="next">
+        <div class="btn btn-primary rounded-circle" style="width: 45px; height: 45px;">
+            <span class="carousel-control-next-icon mb-n2"></span>
+        </div>
+    </a>
+</div>
+</div>
+
+
+<!-- END NEW CAROUSEL -->
+
         <section class="our_activity">
             <h2>About Music Link Foundation</h2>
          
@@ -415,7 +464,7 @@ input::-webkit-inner-spin-button {
         </div>
 <!--end strip-->
 <!-- gallery -->
-
+<br><br><br><br>
 <div class="container gallery-container">
 
     <h1>OUR STUDENTS</h1>
@@ -677,6 +726,12 @@ input::-webkit-inner-spin-button {
                             </div>
                             <div class="item">
                                 <img src="img/amazon.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="img/METEORO.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="img/PEARL.png" alt="">
                             </div>
                         </div>
                     </div>
