--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ input::-webkit-inner-spin-button {
                     <div class="col-md-4 col-xs-12">
                         <div class="single-Promo">
                             <div class="promo-icon">
-                                <i class="material-icons">near_me</i>
+                                <i class="material-icons">track_changes</i>
                             </div>
                             <h2><a href="#">Mission</a></h2>
                             <p>Any child who has musical potential deserves the opportunity to nurture this talent to its full extent. Many children lack the chance to receive music lessons due to financial need. The MusicLink Foundation reaches out to low income families by linking these... </p>
@@ -342,7 +342,7 @@ input::-webkit-inner-spin-button {
                     <div class="col-md-4 col-xs-12">
                         <div class="single-Promo">
                             <div class="promo-icon">
-                                <i class="material-icons">favorite</i>
+                                <i class="material-icons">favorite_border</i>
                             </div>
                             <h2><a href="#">Values</a></h2>
                             <p>MusicLink began in 1992 as a program of the Virginia Music Teachers Association, seeking a way to offer private music instruction to students in need by linking them with teachers willing to provide low- or no-cost instruction for as long as students wish to learn. </p>
@@ -353,7 +353,7 @@ input::-webkit-inner-spin-button {
                     <div class="col-md-4 col-xs-12">
                         <div class="single-Promo">
                             <div class="promo-icon">
-                                <i class="material-icons">dashboard</i>
+                                <i class="material-icons">face</i>
                             </div>
                             <h2><a href="#">Board</a></h2>
                             <p>Joanne Haroutounian, Ph.D. Founder of the MusicLink program and director of the program since 1992. International consultant in musical talent identification. Adjunct professor of piano and pedagogy (retired) at George Mason University for over 20 years. </p>
