--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ input::-webkit-inner-spin-button {
                                 <img src="img/our_cuauses_one.jpg" alt="">
                                 <div class="for_padding">
                                     <h2>SUPPORT MUSIC LINK FOUNDATION</h2>
-                                    <p>Contribute to our goal to reach $100 000 in 2022 to provide our student with the opportunity to receive a musical education.</p> <br>
+                                    <p>Contribute to our goal to reach $100 000 in 2022 to provide our students with the opportunity to receive a musical education.</p> <br>
                                     <div class="progress-text">
                                         <p class="progress-top">20%</p>
                                         <div class="progress">
