--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ input::-webkit-inner-spin-button {
                         <div class="block">
                             <p class="iconsYellowStrip"> <img src="img/teachers-icon03.svg"></p>
                             <p class="counter-wrapper"><span class="bike"></span></p>
-                            <p class="text-block">Teachers Registered</p>
+                            <p class="text-block">Registered Teachers</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6 for-border">
